test/compile_errors/err_issue275_c_string_not_raw_pointer.w
//! expect-check-fail: type mismatch in binding
fn main:
    let p: *const i8 = c"hello"
